feat: install axios library, create instance, upd aliases

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
       "@/assets/*": ["./src/assets/*"],
       "@/components/*": ["./src/components/*"],
       "@/pages/*": ["./src/pages/*"],
+      "@/services/*": ["./src/services/*"],
       "@/styles/*": ["./src/styles/*"]
     }
   }
