--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@/components/*": ["./src/components/*"],
       "@/pages/*": ["./src/pages/*"],
       "@/services/*": ["./src/services/*"],
+      "@/store/*": ["./src/store/*"],
       "@/styles/*": ["./src/styles/*"]
     }
   }
