setup: add makes-data, upd paths-aliases

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "@/*": ["./src/*"],
       "@/assets/*": ["./src/assets/*"],
       "@/components/*": ["./src/components/*"],
+      "@/data/*": ["./src/data/*"],
       "@/hooks/*": ["./src/hooks/*"],
       "@/pages/*": ["./src/pages/*"],
       "@/services/*": ["./src/services/*"],
