--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8"
   },
