--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,7 +10,8 @@
       "@/pages/*": ["./src/pages/*"],
       "@/services/*": ["./src/services/*"],
       "@/store/*": ["./src/store/*"],
-      "@/styles/*": ["./src/styles/*"]
+      "@/styles/*": ["./src/styles/*"],
+      "@/utils/*": ["./src/utils/*"]
     }
   }
 }
